fix of the method getSpellEventsByType